# world-cup-2026-predictor

./: .env.example  CHANGELOG.md  NEWS.md  ODDS.md  PREDICTIONS.md  README.md  TRACK_RECORD.md  pyproject.toml  track_record.jsonl  weights.yaml
scripts/: daily_local.sh  install_launchd.sh  mail_predictions.py
tests/: test_advisor.py  test_analyze.py  test_mine.py  test_previews.py  test_scoring.py  test_track.py  test_v02_features.py
wkpool/: __init__.py  advisor.py  analyze.py  cli.py  config.py  mine.py  news.py  predict.py  previews.py  scoring.py  sources.py  track.py
wkpool/plugins/: __init__.py  previews.py
